--- a/src/features/acount/AccountDetails/AccountDetails.scss
+++ b/src/features/acount/AccountDetails/AccountDetails.scss
@@ -32,12 +32,12 @@
     }
 
     .edit-icon {
-        color: var(--btn-blue-1);
+        color: var(--link-color-1);
         cursor: pointer;
     }
 
     .edit-icon:hover {
-        color: var(--btn-blue-hover-1);
+        color: var(--link-color-hover-1);
     }
 
     .account-detail {
