--- a/src/features/customRankings/CustomRankingsList/CustomRankingsList.scss
+++ b/src/features/customRankings/CustomRankingsList/CustomRankingsList.scss
@@ -5,12 +5,14 @@
         height: 74px;
     }
 
-    .row, .col-labels {
+    .row,
+    .col-labels {
         display: flex;
         justify-content: space-between;
         align-items: center;
         border-bottom: 1px solid var(--lightgrey);
     }
+
     .rankings-title {
         color: var(--btn-blue-1);
         font-weight: 600;
@@ -18,36 +20,43 @@
         cursor: pointer;
         width: fit-content;
     }
+
     .rankings-title:hover {
         color: var(--btn-blue-hover-1);
     }
+
     .rankings-details {
         display: flex;
         color: var(--grey);
         font-size: 9pt;
         padding: 2px;
-        
+
         p {
             margin-right: 10px;
         }
     }
+
     .rankings-title-wrapper {
         flex: 2;
         margin-left: 2%;
     }
+
     .rankings-options-btn {
         padding: 5px;
         height: 1.2em;
         width: 1.2em;
         border-radius: 50%;
     }
+
     .rankings-options-btn:hover {
         background-color: var(--lightgrey);
         border-radius: 50%;
     }
+
     .last-update {
         font-size: 10pt;
     }
+
     .dropdown {
         position: relative;
         display: inline-block;
@@ -58,6 +67,7 @@
         .hidden {
             display: none;
         }
+
         .dropdown-content {
             display: block;
             position: absolute;
@@ -71,9 +81,11 @@
             :first-child {
                 border-radius: 6px 6px 0px 0px;
             }
+
             :last-child {
                 border-radius: 0px 0px 6px 6px;
             }
+
             button {
                 color: black;
                 padding: 10px 12px;
@@ -86,10 +98,12 @@
                 background-color: white;
                 text-align: left;
             }
+
             button:hover {
                 background-color: var(--table-header-color);
             }
         }
+
         .dropbtn {
             padding: 6px;
             border: 2px solid white;
@@ -101,6 +115,7 @@
             cursor: pointer;
         }
     }
+
     .sport-icon-wrapper {
         background-color: var(--grey);
         height: 50%;
@@ -115,15 +130,18 @@
             color: white;
         }
     }
+
     .last-update {
         margin-right: 4px;
     }
+
     .col-labels {
-        
+
         .last-update {
             color: var(--grey);
         }
     }
+
     @media (max-width: 499px) {
         .sport-icon-wrapper {
             height: 40%;
@@ -132,12 +150,15 @@
                 font-size: 12pt;
             }
         }
+
         .dropdown {
             margin-right: 1%;
         }
+
         .rankings-title {
             font-size: 11pt;
         }
+
         .last-update {
             font-size: 9pt;
         }
