Type to change rank. Off by one due to tier indexes.

--- a/src/App.scss
+++ b/src/App.scss
@@ -57,6 +57,7 @@ html {
 main {
   width: 800px;
   max-width: 94%;
+  min-height: 75vh;
   margin-right: auto;
   margin-left: auto;
   padding-top: 2vh;
