--- a/src/features/rankings/RankingsPage/RankingsPage.scss
+++ b/src/features/rankings/RankingsPage/RankingsPage.scss
@@ -10,12 +10,14 @@
 
     .options-wrapper {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
 
-        .filters-wrapper {
+        .options-row {
             display: flex;
-            flex-wrap: wrap;
+            flex-direction: row;
+            width: 100%;
+            justify-content: space-between;
         }
 
         .search, .position-filter, .edit-button {
