--- a/src/components/EditButton/EditButton.scss
+++ b/src/components/EditButton/EditButton.scss
@@ -3,13 +3,13 @@
     background-color: var(--btn-blue-1);
     color: white;
     cursor: pointer;
-    padding: 10px;
-    border-radius: 4px;
+    padding: 0.6rem;
+    border-radius: 0.4rem;
     height: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 12pt;
+    font-size: 0.9rem;
     font-weight: 600;
 }
 .edit-button:hover {
