--- a/src/components/TemplateSelector/TemplateSelector.scss
+++ b/src/components/TemplateSelector/TemplateSelector.scss
@@ -3,7 +3,7 @@
 
     label {
         display: block;
-        font-size: 11pt;
+        font-size: 0.9rem;
         font-weight: 600;
         color: var(--dark-grey);
         margin-bottom: 4px;
