--- a/src/components/Dialogs/Dialog.scss
+++ b/src/components/Dialogs/Dialog.scss
@@ -4,7 +4,7 @@
         padding: 14px;
     }
     h2 {
-        font-size: 13pt;
+        font-size: 1.2rem;
         font-weight: 600;
     }
     .description {
