--- a/src/features/acount/AccountDetails/AccountDetails.scss
+++ b/src/features/acount/AccountDetails/AccountDetails.scss
@@ -1,13 +1,13 @@
 .account-details-wrapper {
     box-shadow: var(--box-shadow-1);
-    border-radius: 4px;
+    border-radius: 0.4rem;
 
     .account-detail:first-child {
-        border-radius: 6px 6px 0px 0px;
+        border-radius: 0.4rem 0.4rem 0 0;
     }
 
     .account-detail:last-child {
-        border-radius: 0px 0px 6px 6px;
+        border-radius: 0 0 0.6rem 0.6rem;
         border-bottom: none;
     }
 
@@ -18,7 +18,7 @@
 
         .label {
             font-weight: 600;
-            margin-bottom: 10px;
+            margin-bottom: 0.9rem;
         }
 
         .value {
@@ -27,7 +27,7 @@
 
         .label,
         .value {
-            font-size: 11pt;
+            font-size: 1rem;
         }
     }
 
@@ -81,9 +81,10 @@
     .cancel-btn,
     .save-btn {
         border: none;
-        padding: 10px;
-        border-radius: 4px;
+        padding: 0.7rem;
+        border-radius: 0.4rem;
         font-weight: 600;
+        font-size: 0.8rem;
         margin-right: 5px;
         margin-left: 5px;
         cursor: pointer;
@@ -105,12 +106,12 @@
         display: flex;
         align-items: center;
         color: red;
-        font-size: 10pt;
-        padding-left: 0.5em;
-        margin-bottom: 0.5em;
+        font-size: 0.9rem;
+        padding-left: 0.5rem;
+        margin-bottom: 0.5rem;
         
         .error-icon {
-            margin-right: 6px;
+            margin-right: 0.4rem;
         }
     }
 }
