--- a/src/features/acount/AccountPage/AccountPage.scss
+++ b/src/features/acount/AccountPage/AccountPage.scss
@@ -1,7 +1,7 @@
 .account-page {
 
     .title-wrapper {
-        margin-top: 20px;
+        margin-top: 1.4rem;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -10,12 +10,13 @@
     }
 
     .logout-btn {
-        padding: 8px 12px 8px 12px;
+        padding: 0.6rem 0.8rem 0.6rem 0.8rem;
         background-color: var(--lightgrey);
         border: none;
-        border-radius: 4px;
+        border-radius: 0.4rem;
         cursor: pointer;
         font-weight: 600;
+        font-size: 0.9rem;
     }
     
     .delete-account-wrapper {
@@ -23,16 +24,16 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-top: 20px;
+        margin-top: 1.6rem;
     }
     .delete-account-btn {
         margin: auto;
-        padding: 0.7em;
+        padding: 0.7rem;
         font-weight: 600;
-        font-size: 11pt;
+        font-size: 0.9rem;
         color: red;
         border: 1px solid red;
-        border-radius: 4px;
+        border-radius: 0.4rem;
         background-color: white;
         cursor: pointer;
     }
