--- a/src/features/customRankings/EditRankingPage/EditRankingPage.scss
+++ b/src/features/customRankings/EditRankingPage/EditRankingPage.scss
@@ -120,6 +120,10 @@
         }
     }
 
+    .position-filter-wrapper {
+        margin-bottom: 0.5rem;
+    }
+
     .description {
         margin-bottom: 10px;
         margin-left: 2px;
