--- a/src/App.scss
+++ b/src/App.scss
@@ -49,8 +49,9 @@ html {
   --link-color-hover-light-1: #1a1f35;
   --table-header-blue-light: #EAF0FF;
   --orbitron-font: 'Orbitron', sans-serif;
-  --btn-green-1: #66bb6a;
+  --btn-green-1: #15BE53;
   --btn-green-2: #388E3C;
+  --red-1: #EB1600;
   --dark-red: #880808;
 }
 
