--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background-color: var(--lightgrey);
+    background-color: var(--black);
     margin-top: 20px;
 
     .footer-inner {
@@ -24,7 +24,11 @@ footer {
     }
 
     .footer-link {
-        font-size: 11pt;
+        font-size: 0.8rem;
         margin: 5px;
+        color: white;
+    }
+    .footer-link:hover {
+        color: var(--lightgrey);
     }
 }
