--- a/src/features/acount/AccountPage/AccountPage.scss
+++ b/src/features/acount/AccountPage/AccountPage.scss
@@ -17,6 +17,7 @@
         cursor: pointer;
         color: var(--link-color-1);
         font-weight: 600;
+        text-decoration: none;
         font-size: 0.9rem;
     }
     .logout-btn:hover {
