--- a/src/components/Nav/DefaultNav/DefaultNav.scss
+++ b/src/components/Nav/DefaultNav/DefaultNav.scss
@@ -75,7 +75,7 @@
                 border-radius: 0px 0px 6px 6px;
             }
 
-            a, p {
+            .profile-dropdown-link, p {
                 color: black;
                 text-decoration: none;
                 font-size: 11pt;
@@ -87,6 +87,11 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
+                background-color: white;
+            }
+
+            button.profile-dropdown-link {
+                width: 100%;
             }
 
             .user-email {
@@ -94,7 +99,7 @@
                 border-bottom: 1px solid var(--lightgrey);
             }
 
-            a:hover {
+            .profile-dropdown-link:hover {
                 background-color: var(--table-header-color);
             }
         }
