--- a/src/features/customRankings/EditRankingPage/EditRankingPage.scss
+++ b/src/features/customRankings/EditRankingPage/EditRankingPage.scss
@@ -21,6 +21,7 @@
             font-weight: 600;
             padding: 1px;
             border: none;
+            width: 100%;
         }
 
         .title-input-text.unselected {
