Initial Add Players List on customize rankings page.

--- a/src/App.scss
+++ b/src/App.scss
@@ -49,7 +49,7 @@ html {
   --link-color-hover-light-1: #1a1f35;
   --table-header-blue-light: #EAF0FF;
   --orbitron-font: 'Orbitron', sans-serif;
-  --btn-green-1: #15BE53;
+  --btn-green-1: #109e44;
   --btn-green-2: #388E3C;
   --red-1: #EB1600;
   --dark-red: #880808;
