Prop for PositionFilter that prevents small from being used.

--- a/src/features/rankings/RankingsPage/RankingsPage.scss
+++ b/src/features/rankings/RankingsPage/RankingsPage.scss
@@ -21,7 +21,7 @@
             flex-wrap: wrap;
         }
 
-        .select-filter, .position-filter-wrapper, .edit-button {
+        .select-filter, .position-filter, .edit-button {
             margin-bottom: 0.5rem;
         }
 
