--- a/src/features/customRankings/EditRankingPage/EditRankingPage.scss
+++ b/src/features/customRankings/EditRankingPage/EditRankingPage.scss
@@ -8,7 +8,6 @@
     .columns-wrapper {
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
 
         h3 {
             padding-top: 0.7rem;
@@ -186,8 +185,9 @@
     }
 
     .description {
+        margin-top: 10px;
         margin-bottom: 10px;
-        margin-left: 2px;
+        color: var(--grey);
     }
 
     @media (max-width: 499px) {
