Color changes for custom rankings table header and filters backgrounds.

--- a/src/features/customRankings/AddPlayersList/AddPlayersList.scss
+++ b/src/features/customRankings/AddPlayersList/AddPlayersList.scss
@@ -27,6 +27,7 @@
         .add-icon {
             font-size: 1.5rem;
             cursor: pointer;
+            color: var(--btn-blue-1);
         }
     }
 
