--- a/src/components/PositionFilter/PositionFilter.scss
+++ b/src/components/PositionFilter/PositionFilter.scss
@@ -3,7 +3,7 @@
 
     button {
         font-size: 0.8rem;
-        background: var(--background-color);
+        background-color: white;
         padding: 0.5rem 1rem 0.5rem 1rem;
         border-top: 1px solid var(--lightgrey);
         border-bottom: 1px solid var(--lightgrey);
@@ -47,8 +47,8 @@
         cursor: pointer;
         border: 1px solid var(--lightgrey);
         border-radius: 6px;
-        // padding: 0.4rem 1rem 0.4rem 1rem;
-
+        background-color: white;
+        
         div {
             font-size: 0.5rem !important;
         }
