--- a/src/features/customRankings/EditRankingPage/EditRankingPage.scss
+++ b/src/features/customRankings/EditRankingPage/EditRankingPage.scss
@@ -107,7 +107,8 @@
 
     .submit-btn,
     .cancel-btn,
-    .add-tier-btn {
+    .add-tier-btn,
+    .clear-rankings-btn {
         border: none;
         padding: 10px;
         border-radius: 4px;
@@ -134,6 +135,13 @@
         background-color: var(--lightgrey);
     }
 
+    .clear-rankings-btn {
+        background-color: var(--red-1);
+        color: white;
+        cursor: pointer;
+        margin-left: 0.4rem;
+    }
+
     .add-tier-btn {
         background-color: var(--btn-green-1);
         color: white;
@@ -155,6 +163,22 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    .empty-description {
+        padding: 0.5rem;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        align-items: center;
+        font-size: 1rem;
+
+        .add-icon {
+            font-size: 1rem;
+            color: var(--btn-blue-1);
+            margin: 0.3rem;
+        }
     }
 
     .drag-drop-rankings {
