--- a/src/features/customRankings/EditRankingPage/EditRankingPage.scss
+++ b/src/features/customRankings/EditRankingPage/EditRankingPage.scss
@@ -187,13 +187,13 @@
 
         .table-header {
             padding: 8px;
-            font-size: 10pt;
+            font-size: 0.7rem;
             background-color: var(--lightgrey);
             border: 1px solid var(--lightgrey);
             border-radius: 6px 6px 0 0;
 
             .col-label {
-                font-weight: 600;
+                font-weight: 500;
                 color: black;
             }
         }
