About page. Improve word logo.

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -11,22 +11,25 @@ footer {
     }
 
     .footer-logo {
-        width: 150px;
+        width: 170px;
+        max-width: 30vw;
         cursor: pointer;
     }
 
     .footer-links {
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        flex-direction: column;
         justify-content: center;
         margin-top: 10px;
     }
 
     .footer-link {
-        font-size: 0.8rem;
-        margin: 5px;
+        text-decoration: none;
+        font-size: 1rem;
+        margin: 0.6rem;
         color: white;
+        font-weight: 600;
+        color: var(--table-header-color);
     }
     .footer-link:hover {
         color: var(--lightgrey);
