--- a/src/features/customRankings/CustomRankingsPage/CustomRankingsPage.scss
+++ b/src/features/customRankings/CustomRankingsPage/CustomRankingsPage.scss
@@ -1,5 +1,9 @@
 .custom-rankings-page {
 
+    h1 {
+        margin-top: 0.6rem;
+    }
+
     .rankings-options {
         display: flex;
         flex-direction: row;
@@ -11,5 +15,37 @@
     .description {
         margin-left: 3px;
         margin-top: 10px;
+        color: var(--grey);
+    }
+
+    .edit-button {
+        border: none;
+        background-color: var(--btn-blue-1);
+        color: white;
+        cursor: pointer;
+        padding: 0.7rem 0rem 0.7rem 0.9rem;
+        border-radius: 6px;
+        height: fit-content;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 0.9rem;
+        font-weight: 600;
+        box-shadow: var(--box-shadow-1);
+
+        .new-icon {
+            padding-left: 0.1rem;
+            padding-right: 0.9rem;
+            transition: 0.2s padding ease-in-out;
+        }
+    }
+
+    .edit-button:hover {
+        background-color: var(--submit-btn-hover-light-1);
+
+        .new-icon {
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
+        }
     }
 }
