--- a/src/features/customRankings/EditRankingPage/EditRankingPage.scss
+++ b/src/features/customRankings/EditRankingPage/EditRankingPage.scss
@@ -12,7 +12,7 @@
         h3 {
             padding-top: 0.7rem;
             padding-bottom: 0.7rem;
-            font-size: 1.3rem;
+            font-size: 1.4rem;
         }
 
         .rankings-wrapper {
@@ -32,40 +32,45 @@
         margin-top: 1rem;
         margin-bottom: 1rem;
         display: flex;
+        border: 1px solid var(--lightgrey);
+        border-radius: 4px;
     }
 
     .tab-btn {
-        background: none;
+        background-color: white;
         border: none;
         font-weight: 600;
-        font-size: 1rem;
-        padding: 0.4rem;
-        color: black;
+        font-size: 0.9rem;
+        padding-top: 0.7rem;
+        padding-bottom: 0.7rem;
         flex: 1;
+        border-radius: 4px;
         cursor: pointer;
     }
 
     .tab-btn:not(.active) {
-        border-bottom: 2px solid transparent;
+        color: var(--btn-blue-1);
     }
 
     .tab-btn.active {
-        border-bottom: 2px solid black;
+        background-color: var(--btn-blue-1);
+        color: white;
     }
 
     .updated-wrapper {
         margin-top: 10px;
-        font-size: 11pt;
 
         .last-update {
             color: var(--grey);
             font-weight: 500;
+            font-size: 0.9rem;
         }
     }
 
     .title-wrapper {
         display: flex;
         align-items: center;
+        margin-top: 0.8rem;
         
         .title-input-text {
             font-size: 1.8em;
@@ -107,13 +112,17 @@
         }
     }
 
+    .submit-btn {
+        margin-right: 0.6rem;
+    }
+
     .submit-btn,
     .cancel-btn,
     .add-tier-btn,
     .clear-rankings-btn {
         border: none;
         padding: 10px;
-        border-radius: 4px;
+        border-radius: 6px;
         font-weight: 600;
     }
 
@@ -210,9 +219,30 @@
         margin-bottom: 0.5rem;
     }
 
+    .length-indicator {
+        font-size: 0.8rem;
+        padding: 0.3rem 0.4rem 0.3rem 0.4rem;
+        border-radius: 6px;
+        // background-color: var(--lightgrey);
+        border: 1px solid var(--submit-btn-hover-light-1);
+        color: var(--submit-btn-hover-light-1);
+        margin-left: 0.6rem;
+        margin-right: 0.6rem;
+        font-weight: 600;
+    }
+
+    .small-length-indicator {
+        background-color: white;
+        color: var(--btn-blue-1);
+        border-radius: 4px;
+        font-size: 0.8rem;
+        margin-left: 0.4rem;
+        padding: 0.3rem 0.4rem 0.3rem 0.4rem;
+    }
+
     .description {
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-top: 0.6rem;
+        margin-bottom: 1.2rem;
         color: var(--grey);
     }
 
