--- a/src/features/rankings/Rankings/Rankings.scss
+++ b/src/features/rankings/Rankings/Rankings.scss
@@ -10,7 +10,7 @@
         font-weight: 600;
     }
     tbody td, thead th {
-        padding: 8px;
+        padding: 0.6rem;
         font-size: 10pt;
     }
     tr {
@@ -47,7 +47,7 @@
     }
     @media (max-width: 499px) {
         tbody td, thead th {
-            padding: 8px;
+            padding: 0.6rempx;
             font-size: 9pt;
         }
         tr {
