Change style for when player is selected for dragging.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
 
 * {
   margin: 0;
   padding: 0;
+  font-family: var(--inter-font);
 }
 
 html {
@@ -49,6 +52,8 @@ html {
   --link-color-hover-light-1: #1a1f35;
   --table-header-blue-light: #EAF0FF;
   --orbitron-font: 'Orbitron', sans-serif;
+  --nunito-font: 'Nunito', 'sans-serif';
+  --inter-font: 'Inter', 'sans-serif';
   --btn-green-1: #109e44;
   --btn-green-2: #388E3C;
   --red-1: #EB1600;
